--- a/compare-src/package.json
+++ b/compare-src/package.json
@@ -23,6 +23,7 @@
     "parcel": "^1.12.4",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4",
+    "vue-plugin-load-script": "^1.3.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
