--- a/package.json
+++ b/package.json
@@ -1,89 +1,19 @@
 {
-  "name": "dc",
-  "version": "3.0.4",
-  "license": "Apache-2.0",
-  "copyright": "2017",
-  "description": "A multi-dimensional charting library built to work natively with crossfilter and rendered using d3.js ",
-  "keywords": [
-    "visualization",
-    "svg",
-    "animation",
-    "canvas",
-    "chart",
-    "dimensional",
-    "crossfilter",
-    "d3"
-  ],
-  "homepage": "http://dc-js.github.io/dc.js/",
-  "bugs": "https://github.com/dc-js/dc.js/issues",
-  "author": {
-    "name": "Nick Zhu",
-    "url": "http://nzhu.blogspot.ca/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dc-js/dc.js.git"
-  },
+  "name": "Spot",
+  "version": "1.0.0",
+  "description": "spot dashboard",
+  "main": "app.js",
+  "devtool": "source-map",
   "dependencies": {
-    "crossfilter2": "^1.4.5",
-    "d3": "^5.4.0"
+    "crossfilter2": "^1.5.4",
+    "d3": "^7.3.0",
+    "dc": "^4.2.7"
   },
-  "devDependencies": {
-    "compare-versions": "^3.2.1",
-    "file-saver": "^1.3.8",
-    "grunt": "^1.0.3",
-    "grunt-browserify": "^5.2.0",
-    "grunt-cli": "~1.2",
-    "grunt-contrib-concat": "~1.0",
-    "grunt-contrib-connect": "~1.0",
-    "grunt-contrib-copy": "~1.0",
-    "grunt-contrib-cssmin": "2.x",
-    "grunt-contrib-jasmine": "^1.2.0",
-    "grunt-contrib-jshint": "~1.1",
-    "grunt-contrib-uglify": "~3.2",
-    "grunt-contrib-watch": "~1.0",
-    "grunt-docco2": "^0.2.1",
-    "grunt-fileindex": "~0.1",
-    "grunt-gh-pages": "~2",
-    "grunt-jscs": "~3.0",
-    "grunt-jsdoc": "^2.2.1",
-    "grunt-jsdoc-to-markdown": "3.x",
-    "grunt-karma": "^2.0.0",
-    "grunt-markdown": "~0.7",
-    "grunt-sass": "^2.1.0",
-    "grunt-shell": "~2.1",
-    "ink-docstrap": "^1.3.2",
-    "jasmine-core": "^2.99.1",
-    "jsdifflib": "~1.1",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-sauce-launcher": "^1.2.0",
-    "karma-summary-reporter": "^1.5.0",
-    "load-grunt-tasks": "~3.5",
-    "marked": "~0.3.19",
-    "time-grunt": "~1.4",
-    "uglify-js": "^3.3.26"
-  },
+  "devDependencies": {},
   "scripts": {
-    "test": "grunt test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "npmName": "dc",
-  "npmFileMap": [
-    {
-      "basePath": "/",
-      "files": [
-        "dc.css",
-        "dc.min.css",
-        "dc.min.js",
-        "dc.min.js.map",
-        "dc.js",
-        "dc.js.map"
-      ]
-    }
-  ],
-  "browser": "dc.js",
-  "main": "dc.js"
+  "repository": {},
+  "author": "LLNL",
+  "license": "Apache-2.0"
 }
