--- a/compare-rebuild/package.json
+++ b/compare-rebuild/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.21.1",
-    "css-loader": "^6.7.1",
     "d3-array": "^3.1.4",
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.1",
@@ -23,13 +22,8 @@
     "localforage": "^1.7.4",
     "lodash": "^4.17.21",
     "md5": "^2.2.1",
-    "parcel": "^2.4.1",
     "pug": "^3.0.2",
-    "require": "^0.4.4",
-    "require-dir": "^1.2.0",
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14",
-    "vue-style-loader": "^4.1.3"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -37,11 +31,18 @@
     "@parcel/transformer-vue": "^2.4.1",
     "@vue/component-compiler-utils": "^3.3.0",
     "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
     "pug": "^3.0.2",
     "sass": "^1.26.3",
     "stylus": "^0.54.7",
     "typescript": "^4.6.3",
+    "vue": "^3.2.32",
     "vue-loader": "^17.0.0",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
