--- a/compare-rebuild/package.json
+++ b/compare-rebuild/package.json
@@ -5,13 +5,17 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --watch --mode development --stats-error-details",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "babel-watch  --watch -- index",
+    "dev": "npm run watch & npm run client:build-dev ",
+    "client:build-dev": "webpack --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "babel-watch": "^7.7.0",
     "core-js": "^3.21.1",
     "d3-array": "^3.1.4",
     "d3-axis": "^1.0.12",
@@ -22,7 +26,6 @@
     "localforage": "^1.7.4",
     "lodash": "^4.17.21",
     "md5": "^2.2.1",
-    "pug": "^3.0.2",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
@@ -30,21 +33,20 @@
     "@babel/preset-env": "^7.16.11",
     "@parcel/transformer-vue": "^2.4.1",
     "@vue/component-compiler-utils": "^3.3.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "sass": "^1.26.3",
     "stylus": "^0.54.7",
     "typescript": "^4.6.3",
-    "vue": "^3.2.32",
+    "vue": "^3.2.33",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.71.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   }
