--- a/package.json
+++ b/package.json
@@ -2,18 +2,69 @@
   "name": "Spot",
   "version": "1.0.0",
   "description": "spot dashboard",
-  "main": "app.js",
+    "main": "./compare-rebuild/src/index.js",
   "devtool": "source-map",
   "dependencies": {
     "crossfilter2": "^1.5.4",
     "d3": "^7.3.0",
     "dc": "^4.2.7",
-    "vue": "^3.2.30",
-    "jquery": "^3.6.0"
+    "vue": "^3.2.31",
+    "jquery": "^3.6.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-watch": "^7.7.0",
+    "d3-array": "^3.1.4",
+    "d3-axis": "^1.0.12",
+    "d3-scale": "^3.2.1",
+    "d3-shape": "^1.3.7",
+    "d3-time-format": "^4.1.0",
+    "localforage": "^1.7.4",
+    "lodash": "^4.17.21",
+    "md5": "^2.2.1",
+    "parcel": "^2.4.1",
+    "require": "^2.4.20",
+    "require-dir": "^1.2.0",
+    "vue-loader": "^17.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@parcel/transformer-vue": "^2.4.1",
+    "@vue/component-compiler-utils": "^3.3.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "sass": "^1.26.3",
+    "stylus": "^0.54.7",
+    "typescript": "^4.6.3",
+    "vue": "^3.2.33",
+    "vue-loader": "^17.0.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1",
+    "@parcel/transformer-vue": "^2.4.1",
+    "@vue/component-compiler-utils": "^3.3.0",
+    "pug": "^3.0.2",
+    "sass": "^1.26.3",
+    "stylus": "^0.54.7",
+    "typescript": "^4.6.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-walltime": "parcel build src/walltime.pug -d ../sankey -o index.html --no-source-maps --public-url './'",
+    "watch-walltime": "parcel watch src/walltime.pug -d ../sankey -o index.html --public-url './'",
+    "prod": "webpack --mode production",
+    "build": "webpack --watch --mode development --stats-error-details",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "babel-watch  --watch -- index",
+    "dev": "npm run watch & npm run client:build-dev ",
+    "client:build-dev": "webpack --watch"
   },
   "repository": {},
   "author": "LLNL",
