--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "crossfilter2": "^1.5.4",
     "d3": "^7.3.0",
     "dc": "^4.2.7",
-    "vue": "^3.2.31",
     "jquery": "^3.6.0",
     "babel-polyfill": "^6.26.0",
     "babel-watch": "^7.7.0",
@@ -22,29 +21,19 @@
     "md5": "^2.2.1",
     "parcel": "^2.4.1",
     "require": "^2.4.20",
-    "require-dir": "^1.2.0",
-    "vue-loader": "^17.0.0"
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
-    "@parcel/transformer-vue": "^2.4.1",
-    "@vue/component-compiler-utils": "^3.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "sass": "^1.26.3",
-    "stylus": "^0.54.7",
-    "typescript": "^4.6.3",
     "vue": "^3.2.33",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
     "@parcel/transformer-vue": "^2.4.1",
     "@vue/component-compiler-utils": "^3.3.0",
@@ -52,7 +41,6 @@
     "sass": "^1.26.3",
     "stylus": "^0.54.7",
     "typescript": "^4.6.3",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   },
