--- a/package.json
+++ b/package.json
@@ -47,12 +47,10 @@
   "scripts": {
     "build-walltime": "parcel build src/walltime.pug -d ../sankey -o index.html --no-source-maps --public-url './'",
     "watch-walltime": "parcel watch src/walltime.pug -d ../sankey -o index.html --public-url './'",
-    "prod": "webpack --mode production",
-    "build": "webpack --watch --mode development --stats-error-details",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "babel-watch  --watch -- index",
     "dev": "npm run watch & npm run client:build-dev ",
-    "client:build-dev": "webpack --watch"
+    "client:build-dev": "webpack --watch",
+    "walltime": "webpack --config walltime.webpack.config.js"
   },
   "repository": {},
   "author": "LLNL",
