XAxis listener pre work

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "watch": "babel-watch  --watch -- index",
-    "dev": "npm run watch & npm run client:build-dev ",
+    "build": "npm run watch & npm run client:build-dev ",
     "client:build-dev": "webpack --watch",
     "walltime": "webpack --config walltime.webpack.config.js --watch"
   },
