--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-watch": "^7.7.0",
     "d3-array": "^3.1.4",
+    "d3-sankey": "^0.12.3",
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.1",
     "d3-shape": "^1.3.7",
@@ -48,7 +49,8 @@
     "watch": "babel-watch  --watch -- index",
     "build": "npm run watch & npm run client:build-dev ",
     "client:build-dev": "webpack --watch",
-    "walltime": "webpack --config walltime.webpack.config.js --watch"
+    "walltime": "webpack --config walltime.webpack.config.js --watch",
+    "ares": "webpack --config ares.webpack.config.js --watch"
   },
   "repository": {},
   "author": "LLNL",
