--- a/compare-src/package.json
+++ b/compare-src/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.26.3",
     "stylus": "^0.54.7",
     "typescript": "^3.8.3",
+    "parcel": "^1.12.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
