scss to css refactor plus fixes for web/img

--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "Spot",
   "version": "1.0.0",
   "description": "spot dashboard",
-    "main": "./compare-rebuild/src/index.js",
+  "main": "./compare-rebuild/src/index.js",
   "devtool": "source-map",
   "dependencies": {
-    "crossfilter2": "^1.5.4",
-    "d3": "^7.3.0",
-    "dc": "^4.2.7",
-    "jquery": "^3.6.0",
     "babel-polyfill": "^6.26.0",
     "babel-watch": "^7.7.0",
+    "crossfilter2": "^1.5.4",
+    "d3": "^7.3.0",
     "d3-array": "^3.1.4",
-    "d3-sankey": "^0.12.3",
     "d3-axis": "^1.0.12",
+    "d3-sankey": "^0.12.3",
     "d3-scale": "^3.2.1",
     "d3-shape": "^1.3.7",
     "d3-time-format": "^4.1.0",
+    "dc": "^4.2.7",
+    "jquery": "^3.6.0",
     "localforage": "^1.7.4",
     "lodash": "^4.17.21",
     "md5": "^2.2.1",
@@ -27,25 +27,31 @@
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
+    "@parcel/transformer-vue": "^2.4.1",
+    "@vue/component-compiler-utils": "^3.3.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "cssnano": "^5.1.7",
     "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^7.0.1",
+    "postcss-loader": "^6.2.1",
+    "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.54.7",
+    "typescript": "^4.6.3",
     "vue": "^3.2.33",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
-    "webpack-dev-server": "^4.8.1",
-    "@parcel/transformer-vue": "^2.4.1",
-    "@vue/component-compiler-utils": "^3.3.0",
-    "pug": "^3.0.2",
-    "sass": "^1.26.3",
-    "stylus": "^0.54.7",
-    "typescript": "^4.6.3",
     "webpack": "^5.71.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "scripts": {
+    "scss": "node-sass --watch style/Whole.scss -o css_dist",
     "watch": "babel-watch  --watch -- index",
     "build": "npm run watch & npm run client:build-dev ",
     "client:build-dev": "webpack --watch",
